// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<TitleBar /> > Snapshot > should match snapshot 1`] = `
<div>
  <div
    class="TitleBar_titleBarBackground__1kpzw682 TitleBar_titleBarBackground_active_true__1kpzw683"
  >
    <svg test-file-stub />
    <div
      class="TitleBar_title__1kpzw685"
    >
      test.exe
    </div>
  </div>
  <div
    class="TitleBar_titleBarBackground__1kpzw682 TitleBar_titleBarBackground_active_false__1kpzw684"
  >
    <svg test-file-stub />
    <div
      class="TitleBar_title__1kpzw685"
    >
      test.exe
    </div>
  </div>
  <div
    class="TitleBar_titleBarBackground__1kpzw682 TitleBar_titleBarBackground_active_true__1kpzw683"
  >
    <div
      class="TitleBar_title__1kpzw685"
    >
      UNKNOWN.EXE
    </div>
  </div>
  <div
    class="TitleBar_titleBarBackground__1kpzw682 TitleBar_titleBarBackground_active_false__1kpzw684"
  >
    <div
      class="TitleBar_title__1kpzw685"
    >
      UNKNOWN.EXE
    </div>
  </div>
</div>
`;

exports[`<TitleBar /> > Snapshot > should match snapshot with custom option 1`] = `
<div>
  <div
    class="TitleBar_titleBarBackground__1kpzw682 TitleBar_titleBarBackground_active_true__1kpzw683"
  >
    <svg test-file-stub />
    <div
      class="TitleBar_title__1kpzw685"
    >
      test.exe
    </div>
    <div
      class="TitleBar_optionsBox__1kpzw680"
    >
      <button
        class="Button_button__1bzq74l0 TitleBar_option__1kpzw681"
      >
        ?
      </button>
      <button
        class="Button_button__1bzq74l0 TitleBar_option__1kpzw681"
      >
        x
      </button>
    </div>
  </div>
</div>
`;

exports[`<TitleBar /> > Snapshot > should match snapshot with default options 1`] = `
<div>
  <div
    class="TitleBar_titleBarBackground__1kpzw682 TitleBar_titleBarBackground_active_true__1kpzw683"
  >
    <svg test-file-stub />
    <div
      class="TitleBar_title__1kpzw685"
    >
      test.exe
    </div>
    <div
      class="TitleBar_optionsBox__1kpzw680"
    >
      <button
        class="Button_button__1bzq74l0 TitleBar_option__1kpzw681"
      >
        <img
          alt="help"
          src="test-file-stub"
        />
      </button>
      <button
        class="Button_button__1bzq74l0 TitleBar_option__1kpzw681"
      >
        <img
          alt="maximize"
          src="test-file-stub"
        />
      </button>
      <button
        class="Button_button__1bzq74l0 TitleBar_option__1kpzw681"
      >
        <img
          alt="minimize"
          src="test-file-stub"
        />
      </button>
      <button
        class="Button_button__1bzq74l0 TitleBar_option__1kpzw681"
      >
        <img
          alt="restore"
          src="test-file-stub"
        />
      </button>
      <button
        class="Button_button__1bzq74l0 TitleBar_option__1kpzw681"
      >
        <img
          alt="close"
          src="test-file-stub"
        />
      </button>
    </div>
  </div>
</div>
`;
